adding required functional